--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,9 @@
     "type": "library",
     "require": {
         "php": ">=7.0",
-        "illuminate/support": "^5.7@dev"
+        "illuminate/config": "~5.5.0|~5.6.0",
+        "illuminate/database": "~5.5.0|~5.6.0",
+        "illuminate/support": "~5.5.0|~5.6.0"
     },
     "autoload": {
         "psr-4": {
