--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,10 @@
     "type": "library",
     "require": {
         "php": ">=7.0",
-        "illuminate/config": "~5.5.0|~5.6.0",
-        "illuminate/database": "~5.5.0|~5.6.0",
-        "illuminate/support": "~5.5.0|~5.6.0",
-        "illuminate/routing": "~5.5.0|~5.6.0"
+        "illuminate/config": "~5.5.0|~5.6.0|~5.7.0",
+        "illuminate/database": "~5.5.0|~5.6.0|~5.7.0",
+        "illuminate/support": "~5.5.0|~5.6.0|~5.7.0",
+        "illuminate/routing": "~5.5.0|~5.6.0|~5.7.0"
     },
     "autoload": {
         "psr-4": {
