--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "vue": "^2.5.15",
+        "vue-router": "^3.0.1",
         "vue-template-compiler": "^2.5.15"
     }
 }
