--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "laravel-mix": "^1.0"
     },
     "dependencies": {
+        "timeago.js": "^3.0.2",
         "vue": "^2.5.15",
         "vue-template-compiler": "^2.5.15"
     }
