--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,1 @@
-MIX_AFTER_CMD="(cd ../test-package && php artisan vendor:publish --tag=public --tag=views --force)"
+MIX_AFTER_CMD="(cd ../test-package && php artisan vendor:publish --provider="Evolution36\WhoopsTracker\WhoopsTrackerServiceProvider" --tag=public --tag=views --force)"
