--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,6 +1,4 @@
 {
     "/src/public/js/app.js": "/src/public/js/app.js",
-    "/src/public/css/app.css": "/src/public/css/app.css",
-    "/src/public/js/app.js.map": "/src/public/js/app.js.map",
-    "/src/public/css/app.css.map": "/src/public/css/app.css.map"
+    "/src/public/css/app.css": "/src/public/css/app.css"
 }
