--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,10 @@ matrix:
 before_script:
 - travis_retry composer self-update
 - travis_retry composer install --prefer-source --no-interaction
-- if [ "$LARAVEL_VERSION" != "" ]; then composer require --dev "laravel/laravel:${LARAVEL_VERSION}" --no-update; fi;
+- if [ "$LARAVEL_VERSION" != "" ]; then composer require --dev "illuminate/config:${LARAVEL_VERSION}" --no-update;
+- composer require --dev "illuminate/database:${LARAVEL_VERSION}" --no-update;
+- composer require --dev "illuminate/support:${LARAVEL_VERSION}" --no-update;
+- composer require --dev "illuminate/routing:${LARAVEL_VERSION}" --no-update; fi;
 - composer update
 
 script:
