Attempt #2 at fixing travis builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,8 @@ before_script:
 - travis_retry composer install --prefer-source --no-interaction
 - if [ "$LARAVEL_VERSION" != "" ]; then composer require --dev "illuminate/config:${LARAVEL_VERSION}" --no-update;
 - composer require --dev "illuminate/database:${LARAVEL_VERSION}" --no-update;
-- composer require --dev "illuminate/support:${LARAVEL_VERSION}" --no-update;
-- composer require --dev "illuminate/routing:${LARAVEL_VERSION}" --no-update; fi;
+composer require --dev "illuminate/support:${LARAVEL_VERSION}" --no-update;
+composer require --dev "illuminate/routing:${LARAVEL_VERSION}" --no-update; fi;
 - composer update
 
 script:
