--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: php
 
 php:
-- 7.0
 - 7.1
 - 7.2
 
@@ -11,15 +10,11 @@ env:
 
 matrix:
     fast_finish: true
-    exclude:
-    - php: 7.0
-      env: LARAVEL_VERSION=5.6.*
 
 before_script:
 - travis_retry composer self-update
 - travis_retry composer install --prefer-source --no-interaction
-- if [ "$LARAVEL_VERSION" != "" ]; then composer require --dev "illuminate/config:${LARAVEL_VERSION}" --no-update;
-- composer require --dev "illuminate/database:${LARAVEL_VERSION}" --no-update; composer require --dev "illuminate/support:${LARAVEL_VERSION}" --no-update; composer require --dev "illuminate/routing:${LARAVEL_VERSION}" --no-update; fi;
+- if [ "$LARAVEL_VERSION" != "" ]; then composer require --dev "illuminate/config:${LARAVEL_VERSION}" --no-update; composer require --dev "illuminate/database:${LARAVEL_VERSION}" --no-update; composer require --dev "illuminate/support:${LARAVEL_VERSION}" --no-update; composer require --dev "illuminate/routing:${LARAVEL_VERSION}" --no-update; fi;
 - composer update
 
 script:
