--- a/composer.json
+++ b/composer.json
@@ -28,5 +28,8 @@
                 "Evolution36\\WhoopsTracker\\WhoopsTrackerServiceProvider"
             ]
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^7.4@dev"
     }
 }
