--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: php
 
 php:
+- 7.0
 - 7.1
 - 7.2
 
@@ -10,6 +11,9 @@ env:
 
 matrix:
     fast_finish: true
+    exclude:
+    - php: 7.0
+      env: LARAVEL_VERSION=5.6.*
 
 before_script:
 - travis_retry composer self-update
