--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,6 @@
             "email": "info@evolution36.com"
         }
     ],
-    "minimum-stability": "dev",
     "extra": {
         "laravel": {
             "providers": [
@@ -30,6 +29,7 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.4@dev"
+        "phpunit/phpunit": "^7.4@dev",
+        "orchestra/testbench": "~3.0"
     }
 }
