--- a/.travis.yml
+++ b/.travis.yml
@@ -6,20 +6,17 @@ php:
 - 7.2
 
 env:
-- LARAVEL_VERSION=5.5.*
-- LARAVEL_VERSION=5.6.*
-
+    matrix:
+    - COMPOSER_FLAGS="--prefer-lowest"
+    - COMPOSER_FLAGS=""
 matrix:
-    fast_finish: true
     exclude:
-    - php: 7.0
-      env: LARAVEL_VERSION=5.6.*
+    - php: 7.2
+      env: COMPOSER_FLAGS="--prefer-lowest"
 
 before_script:
 - travis_retry composer self-update
-- travis_retry composer install --prefer-source --no-interaction
-- if [ "$LARAVEL_VERSION" != "" ]; then composer require --dev "illuminate/config:${LARAVEL_VERSION}" --no-update; composer require --dev "illuminate/database:${LARAVEL_VERSION}" --no-update; composer require --dev "illuminate/support:${LARAVEL_VERSION}" --no-update; composer require --dev "illuminate/routing:${LARAVEL_VERSION}" --no-update; fi;
-- composer update
+- travis_retry composer update ${COMPOSER_FLAGS} --no-interaction --prefer-source
 
 script:
 - vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
