--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.4@dev",
-        "orchestra/testbench": "~3.0"
+        "orchestra/testbench": "~3.4.2|~3.5.0|~3.6.0|~3.7.0",
+        "phpunit/phpunit" : "^5.7|6.2|^7.0"
     }
 }
