--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,21 @@
 language: php
 
 php:
-- 7.0
 - 7.1
 - 7.2
 
 env:
-    matrix:
-    - COMPOSER_FLAGS="--prefer-lowest"
-    - COMPOSER_FLAGS=""
+- LARAVEL_VERSION=5.5.*
+- LARAVEL_VERSION=5.6.*
+
 matrix:
-    exclude:
-    - php: 7.2
-      env: COMPOSER_FLAGS="--prefer-lowest"
+    fast_finish: true
 
 before_script:
 - travis_retry composer self-update
-- travis_retry composer update ${COMPOSER_FLAGS} --no-interaction --prefer-source
+- travis_retry composer install --prefer-source --no-interaction
+- if [ "$LARAVEL_VERSION" != "" ]; then composer require --dev "illuminate/config:${LARAVEL_VERSION}" --no-update; composer require --dev "illuminate/database:${LARAVEL_VERSION}" --no-update; composer require --dev "illuminate/support:${LARAVEL_VERSION}" --no-update; composer require --dev "illuminate/routing:${LARAVEL_VERSION}" --no-update; fi;
+- composer update
 
 script:
 - vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
