--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         }
     },
     "require-dev": {
-        "orchestra/testbench": "~3.4.2|~3.5.0|~3.6.0|~3.7.0",
-        "phpunit/phpunit" : "^5.7|6.2|^7.0"
+        "orchestra/testbench": "~3.5.0|~3.6.0|~3.7.0",
+        "phpunit/phpunit" : "^7.0"
     }
 }
